@@ -7,11 +7,13 @@
     <groupId>com.github.Valkryst</groupId>
     <artifactId>Emberstone</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>${project.artifactId}</name>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+        <maven.compiler.release>18</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -34,7 +36,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
 
@@ -48,7 +50,7 @@
         <dependency>
             <groupId>com.github.Valkryst</groupId>
             <artifactId>V2DSprite</artifactId>
-            <version>2020.03.01</version>
+            <version>6d5f29573464eeb40901083e29c376fe1144b459</version>
         </dependency>
 
         <!-- INI File Parsing -->
@@ -64,27 +66,34 @@
             <artifactId>ashley</artifactId>
             <version>1.7.4</version>
         </dependency>
+
+        <!-- Video Playback -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>19</version>
+        </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
-        <resources>
-            <resource>
-                <directory>res</directory>
-            </resource>
-        </resources>
         <plugins>
+            <!-- Required to run JavaFX -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-exports=java.desktop/sun.java2d.d3d=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.desktop/sun.java2d.pipe.hw=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
-                        <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                    <fork>true</fork>
+                    <mainClass>com.valkryst.Emberstone.Driver</mainClass>
                 </configuration>
             </plugin>
 
@@ -93,6 +102,25 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+            </plugin>
+
+            <!--- Generates JavaDoc files during build phase. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+                <!--
+                Solution to problem:
+                MavenReportException: Error while creating archive: Unable to
+                find javadoc command: The environment variable JAVA_HOME is not
+                correctly set.
+
+                Unable to find javadoc command - maven
+                Reference: https://stackoverflow.com/a/54323506
+                -->
+                <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                </configuration>
             </plugin>
 
             <!-- Used to include all the dependencies in the packaged Jar file -->
@@ -148,7 +176,7 @@
                             <classPath>
                                 <mainClass>com.valkryst.Emberstone.Driver</mainClass>
                             </classPath>
-                            <icon>res/icon/Icon.ico</icon>
+                            <icon>main/resources/icon/Icon.ico</icon>
                             <jre>
                                 <!-- Folder containing the JRE -->
                                 <path>jdk-11.0.6</path>
